welcome.lessons.welcome.variables.Variables.scala.error
Variables:12: error: ';' expected but ')' found.
poseBiscuit())
             ^